--- a/src/lib/contents/changelog/2022-08-26.md
+++ b/src/lib/contents/changelog/2022-08-26.md
@@ -28,12 +28,12 @@ We've added the ability to back up your Gitpod application config (no workspace 
 
 #### Configure additional registry credentials to use (base) workspace images from private registries
 
-You can now use workspace images that are stored in private registries different from the main registry configured for Gitpod in your [gitpod.yml](../docs/config-gitpod-file) and as an [installation wide default](../docs/self-hosted/latest/advanced/default-workspace-image). This is useful when, for example, you want to pull private base images from one registry and then store the built images in another. For more information visit the [relevant guide](../docs/self-hosted/latest/advanced/private-registries).
+You can now use workspace images that are stored in private registries different from the main registry configured for Gitpod in your [gitpod.yml](../docs/config-gitpod-file) and as an [installation-wide default](../docs/self-hosted/latest/advanced/default-workspace-image). This is useful when, for example, you want to pull private base images from one registry and then store the built images in another. For more information visit the [relevant guide](../docs/self-hosted/latest/advanced/private-registries).
 
 ### Breaking changes
 
 - [11954](https://github.com/gitpod-io/gitpod/pull/11954): remove custom labels from the pod selector labels. This removes this [limitation](https://www.gitpod.io/docs/self-hosted/latest/advanced/customization#limitations) so this is a long-term improvement. The impact of this should be handled transparently for you by the KOTS installer.
-- [12336](https://github.com/gitpod-io/gitpod/pull/12336): Removal of PodSecurityPolicies. These were deprecated from Kubernetes 1.21 and removed from 1.25. This allows Gitpod to run on Kubernetes 1.25+, which is scheduled for imminent release. If you have PodSecurityPolicies enabled in your cluster, we suggest you enable them if possible.
+- [12336](https://github.com/gitpod-io/gitpod/pull/12336): Removal of PodSecurityPolicies. These were deprecated from Kubernetes 1.21 and removed from 1.25. This allows Gitpod to run on Kubernetes 1.25+, which is scheduled for imminent release. If you have PodSecurityPolicies enabled in your cluster, we suggest you disable them as soon as possible.
 
 Please refer to the [2022.08 upgrade guide](../docs/self-hosted/latest/upgrade-guides#202208) in the documentation for details.
 
