fix: add notes to changelog about Local Settings Sync, and ports view updates

--- a/src/lib/contents/changelog/2022-08-01.md
+++ b/src/lib/contents/changelog/2022-08-01.md
@@ -38,9 +38,10 @@ You can learn more about new the approach in its announcement [blog post](https:
 
 ### New ports explorer in VS Code Browser
 
-We developed a new ports explorer in VS Code Browser to align the interface with VS Code Desktop.
-This feature can be enabled by setting `gitpod.experimental.portsView.enabled` to `true` in VS Code settings.
-Give it a try and we’d love to hear [your feedback](https://github.com/gitpod-io/gitpod/issues/7408).
+<!-- ![](2022-08-01.jpg) -->
+<!-- TODO: Add screenshot -->
+
+We developed a new ports explorer in VS Code Browser to align the interface with VS Code Desktop. This feature can be enabled (or disabled) by setting `gitpod.experimental.portsView.enabled` to `true` in VS Code settings. Give the feature a try and we’d love to hear [your feedback](https://github.com/gitpod-io/gitpod/issues/7408).
 
 ### Latest changelog view in VS Code
 
