--- a/src/lib/contents/changelog/2022-08-31.md
+++ b/src/lib/contents/changelog/2022-08-31.md
@@ -17,6 +17,7 @@ Welcome to the August edition of the Gitpod Changelog.
 - [JetBrains now supports multiple task Terminals](#jetbrains-now-supports-multiple-task-terminals)
 - [JetBrains now respects configured Java SDK (JDK) versions](#jetbrains-now-respects-configured-java-sdk-jdk-versions)
 - [View Resource Consumption in JetBrains Backend Control Center](#view-resource-consumption-in-jetbrains-backend-control-center)
+- [Sync Local VS Code Extensions](#sync-local-vs-code-extensions)
 - [VS Code Desktop reduced popups when opening](#vs-code-desktop-reduced-popups-when-opening)
 - [All VS Code Desktop users on SaaS are now using SSH Gateway! 🎉](#all-vs-code-desktop-users-on-saas-are-now-using-ssh-gateway-)
 - [`gp tasks list` shows your current tasks (as defined in the .gitpod.yml)](#gp-tasks-list-shows-your-current-tasks-as-defined-in-the-gitpodyml)
@@ -58,6 +59,12 @@ _Viewing the workspace and node performance in the Backend Control Center_
 ## Improvements for VS Code Desktop
 
 We have been continuing to invest in our desktop editor experiences, including VS Code #[7184](https://github.com/gitpod-io/gitpod/issues/7184), with an emphasis on removing any barriers or friction in getting the VS Code editor open with a Gitpod workspace, establishing a stable connection via SSH, and improving the experience of restarting a timed out workspace.
+
+### Sync Local VS Code Extensions
+
+<!-- TODO: Show notification popup -->
+
+Currently, [VS Code - Remote SSH](https://code.visualstudio.com/docs/remote/ssh) does not automatically install local user extensions on remote machines. Gitpod extension prompts users to enable [VS Code Setting Sync](/docs/ides-and-editors/settings-sync) with Gitpod to retrieve local extensions and automatically install extensions in your Gitpod workspace. You can enable, or disable syncing of local extensions via the `gitpod.remote.syncExtension` VS Code preference. If you have feedback, please add it to the GitHub issue: [#7906](https://github.com/gitpod-io/gitpod/issues/7906).
 
 ### VS Code Desktop reduced popups when opening
 
