--- a/src/lib/contents/changelog/2022-08-01.md
+++ b/src/lib/contents/changelog/2022-08-01.md
@@ -38,10 +38,11 @@ You can learn more about new the approach in its announcement [blog post](https:
 
 ### New ports explorer in VS Code Browser
 
-<!-- ![](2022-08-01.jpg) -->
-<!-- TODO: Add screenshot -->
+We developed a new ports explorer in VS Code Browser to align the interface with VS Code Desktop.
+You can enable, or disable it via the `gitpod.experimental.portsView.enabled` in VS Code settings.
+Give the feature a try and we’d love to hear [your feedback](https://github.com/gitpod-io/gitpod/issues/7408).
 
-We developed a new ports explorer in VS Code Browser to align the interface with VS Code Desktop. This feature can be enabled (or disabled) by setting `gitpod.experimental.portsView.enabled` to `true` in VS Code settings. Give the feature a try and we’d love to hear [your feedback](https://github.com/gitpod-io/gitpod/issues/7408).
+![New ports explorer in VS Code Browser](/images/changelog/2022-08-01/ports.png)
 
 ### Latest changelog view in VS Code
 
