--- a/src/lib/contents/changelog/2022-08-31.md
+++ b/src/lib/contents/changelog/2022-08-31.md
@@ -62,9 +62,10 @@ We have been continuing to invest in our desktop editor experiences, including V
 
 ### Sync Local VS Code Extensions
 
-<!-- TODO: Show notification popup -->
+Currently, [VS Code - Remote SSH](https://code.visualstudio.com/docs/remote/ssh) does not automatically install local user extensions on remote machines. Gitpod extension prompts users to enable [VS Code Setting Sync](/docs/ides-and-editors/settings-sync#enabling-settings-sync-in-vs-code-desktop) with Gitpod to retrieve local extensions and automatically install extensions in your Gitpod workspace. You can enable, or disable syncing of local extensions via the `gitpod.remote.syncExtension` VS Code settings. If you have feedback, please add it to the GitHub issue: [#7906](https://github.com/gitpod-io/gitpod/issues/7906).
 
-Currently, [VS Code - Remote SSH](https://code.visualstudio.com/docs/remote/ssh) does not automatically install local user extensions on remote machines. Gitpod extension prompts users to enable [VS Code Setting Sync](/docs/ides-and-editors/settings-sync) with Gitpod to retrieve local extensions and automatically install extensions in your Gitpod workspace. You can enable, or disable syncing of local extensions via the `gitpod.remote.syncExtension` VS Code preference. If you have feedback, please add it to the GitHub issue: [#7906](https://github.com/gitpod-io/gitpod/issues/7906).
+![Install local VS Code Extensions notification](/images/changelog/2022-08-31/local-extensions.png)
+_Prompt to enable Setting Sync with Gitpod to sync local VS Code extensions_
 
 ### VS Code Desktop reduced popups when opening
 
