--- a/src/lib/contents/changelog/2022-08-31.md
+++ b/src/lib/contents/changelog/2022-08-31.md
@@ -62,7 +62,9 @@ We have been continuing to invest in our desktop editor experiences, including V
 
 ### Sync Local VS Code Extensions
 
-Currently, [VS Code - Remote SSH](https://code.visualstudio.com/docs/remote/ssh) does not automatically install local user extensions on remote machines. Gitpod extension prompts users to enable [VS Code Setting Sync](/docs/ides-and-editors/settings-sync#enabling-settings-sync-in-vs-code-desktop) with Gitpod to retrieve local extensions and automatically install extensions in your Gitpod workspace. You can enable, or disable syncing of local extensions via the `gitpod.remote.syncExtension` VS Code settings. If you have feedback, please add it to the GitHub issue: [#7906](https://github.com/gitpod-io/gitpod/issues/7906).
+The underlying Microsoft [VS Code - Remote SSH](https://code.visualstudio.com/docs/remote/ssh) extension that powers the Gitpod [VS Code Desktop integration](https://www.gitpod.io/docs/ides-and-editors/vscode) does not automatically install local user extensions on remote machines, such as a Gitpod workspace. For users, because VS Code - Remote SSH does not automatically install local extensions, that means you'll have to manually click "install" for each local extensions on every Gitpod workspace start. Installing extensions manually is cumbersome, especially when you have many extensions to install and is a barrier to utilising Gitpod ephemeral workspaces. 
+
+In an upcoming release, Gitpod will prompt you to enable [VS Code Setting Sync](/docs/ides-and-editors/settings-sync#enabling-settings-sync-in-vs-code-desktop) with Gitpod, which will allow Gitpod to retrieve local extensions and automatically install them in your workspace. If for any reason you want to disable syncing of local extensions, you can do so via the `gitpod.remote.syncExtension` VS Code settings. If you have any feedback or thoughts, please add it to the GitHub issue: [#7906](https://github.com/gitpod-io/gitpod/issues/7906).
 
 ![Install local VS Code Extensions notification](/images/changelog/2022-08-31/local-extensions.png)
 _Prompt to enable Setting Sync with Gitpod to sync local VS Code extensions_
