security-log-update-october-typo-fix (#2871)

--- a/src/lib/contents/security/2022-10-07.md
+++ b/src/lib/contents/security/2022-10-07.md
@@ -16,7 +16,7 @@ Finally we’ve identified is where secrets can be logged into [Kubernetes audi
 
 To fix this we now ship environment environment variables and the SCM token as short-lived Kubernetes secret (the secret is deleted once the workspace pod is running). [More details can be found here](https://github.com/gitpod-io/gitpod/issues/10134).
 
-### Remidation
+### Remediation
 
 For SaaS we will be taking measures to remove sensitve data from logs where applicable.
 
