--- a/src/lib/contents/security/2022-10-07.md
+++ b/src/lib/contents/security/2022-10-07.md
@@ -12,9 +12,9 @@ The first issue is regarding the ws-manager pod logging environment variables. I
 
 The second issue regards our common-go component, it includes redaction logic to sanitize log content. This is used by ws-manager and image-builder-mk3 pods, which redacts log content based on [these keywords](https://github.com/gitpod-io/gitpod/blob/0c9675738e21c6c9a0d3c1a733d625e79ff71a2b/components/common-go/log/redact.go#L17-L22). This has been enhanced [[1]](https://github.com/gitpod-io/gitpod/pull/12980) [[2]](https://github.com/gitpod-io/gitpod/pull/13046) and is included in this release.
 
-Finally we’ve identified is where secrets can be logged into [Kubernetes audit logs](https://kubernetes.io/docs/tasks/debug/debug-cluster/audit/). More specifically, a user's environment variables - and their SCM access token - were attached to the workspace pods in clear text. On platforms which log the entire Pod spec to the Kubernetes audit logs (e.g. GKE) this would lead to environment variable values - and the SCM access token - being logged. If such environment variables contain secrets these secrets would be logged to Kubernetes audit logs.
+Finally we’ve identified where secrets can be logged into [Kubernetes audit logs](https://kubernetes.io/docs/tasks/debug/debug-cluster/audit/). More specifically, a user's environment variables - and their SCM access token - were attached to the workspace pods in clear text. On platforms which log the entire Pod spec to the Kubernetes audit logs (e.g. GKE) this would lead to environment variable values - and the SCM access token - being logged. If such environment variables contain secrets these secrets would be logged to Kubernetes audit logs.
 
-To fix this we now ship environment environment variables and the SCM token as short-lived Kubernetes secret (the secret is deleted once the workspace pod is running). [More details can be found here](https://github.com/gitpod-io/gitpod/issues/10134).
+To fix this we now ship environment variables and the SCM token as a short-lived Kubernetes secret (the secret is deleted once the workspace pod is running). [More details can be found here](https://github.com/gitpod-io/gitpod/issues/10134).
 
 ### Remediation
 
