Replace usage-based billing with pay-as-you-go (#3076)

--- a/src/lib/contents/changelog/2022-10-31.md
+++ b/src/lib/contents/changelog/2022-10-31.md
@@ -16,7 +16,7 @@ Welcome to the October 2022 edition of the Gitpod Changelog!
 
 **Key highlights**
 
-- [Even more power! ⚡ Try large workspaces with usage-based billing 🎉](#even-more-power--try-large-workspaces-with-usage-based-billing)
+- [Even more power! ⚡ Try large workspaces with pay-as-you-go 🎉](#even-more-power--try-large-workspaces-with-pay-as-you-go)
 - [Start workspaces based on existing prebuilds ⚡️](#start-workspaces-based-on-existing-prebuilds)
 - [RubyMine and Webstorm IDEs now in beta 🚀](#rubymine-and-webstorm-ides-now-in-beta)
 - [New "exposed ports" view in VS Code Desktop 🔌](#new-exposed-ports-view-in-vs-code-desktop)
@@ -26,19 +26,19 @@ Welcome to the October 2022 edition of the Gitpod Changelog!
 - [Projects now only created under teams, not personal accounts ⚠️](#projects-now-only-created-under-teams-not-personal-accounts)
 - [Using private workspace images (Alpha) 🔐](#using-private-workspace-images-alpha)
 
-## Even more power! &#x26A1; Try large workspaces with usage-based billing &#x1F389;
+## Even more power! &#x26A1; Try large workspaces with pay-as-you-go &#x1F389;
 
 > **Important:** Prices and terms are subject to change.
 
-With [usage-based billing](https://www.gitpod.io/docs/configure/billing/usage-based-billing) you get early access to [workspace classes](https://www.gitpod.io/docs/configure/workspaces/workspace-classes), allowing you to customize your workspace resources. To get access to [usage-based billing](https://www.gitpod.io/docs/configure/billing/usage-based-billing) either for teams or individual users, please [contact us](https://www.gitpod.io/contact/support).
+With [pay-as-you-go](https://www.gitpod.io/docs/configure/billing/pay-as-you-go) you get early access to [workspace classes](https://www.gitpod.io/docs/configure/workspaces/workspace-classes), allowing you to customize your workspace resources. To get access to [pay-as-you-go](https://www.gitpod.io/docs/configure/billing/pay-as-you-go) either for teams or individual users, please [contact us](https://www.gitpod.io/contact/support).
 
-**How does usage-based billing work?**
+**How does pay-as-you-go work?**
 
 - Gitpod usage is measured in credits, based on how long your workspaces run, and the resources consumed by different workspace classes. Metered usage also includes [prebuilds](/docs/configure/projects/prebuilds).
-- [Individual users](/docs/configure/billing/usage-based-billing#configure-personal-billing) receive 500 free credits per month on the free plan, these credits are equivalent to 50 Standard workspace hours or 25 Large workspace hours.
+- [Individual users](/docs/configure/billing/pay-as-you-go#configure-personal-billing) receive 500 free credits per month on the free plan, these credits are equivalent to 50 Standard workspace hours or 25 Large workspace hours.
 - For users who upgrade to the personal paid plan at €/$ 9.00 per month, workspace usage allowance increases to 1000 credits.
-- The standard pay-as-you-go rate for paid users, and [for teams](/docs/configure/billing/usage-based-billing#configure-team-billing), is €/$ 0.036 per credit.
-- Existing paid plans need to be cancelled for usage-based billing to work.
+- The standard pay-as-you-go rate for paid users, and [for teams](/docs/configure/billing/pay-as-you-go#configure-team-billing), is €/$ 0.036 per credit.
+- Existing paid plans need to be cancelled for pay-as-you-go billing to work.
 
 <br/>
 
