--- a/src/lib/contents/changelog/2022-11-30.md
+++ b/src/lib/contents/changelog/2022-11-30.md
@@ -2,8 +2,8 @@
 title: November Gitpod Release 2022
 excerpt: The latest Gitpod updates for November 2022, including new JetBrains IDEs, more reliable Vs Code extensions and lots of other fixes and improvements.
 date: 2022-11-30
-image: 2022-11-30-og.jpg
-ogImage: 2022-11-31-og.jpg
+image: 2022-11-30.jpg
+ogImage: 2022-11-30.jpg
 alt: 2022-11-30 image
 ---
 
