Cleanup for Unused PostCSS for Homepage components (#3539)
* Cleanup for Homepage components

* fix: image A11y in blogs & changelogs

--- a/src/lib/contents/changelog/2022-09-30.md
+++ b/src/lib/contents/changelog/2022-09-30.md
@@ -79,7 +79,7 @@ So since we needed somewhere to show you this Workspace Class information, you c
 
 ### JetBrains Reconnect With Open Windows
 
-![](/images/jetbrains-gateway/intellij-workspace-already-open.png)
+![JetBrains Reconnect](/images/jetbrains-gateway/intellij-workspace-already-open.png)
 
 Previously, with JetBrains if you tried to open your workspace twice, the Gitpod JetBrains Gateway plugin would allow you, sometimes leading to odd behaviors or bugs, since JetBrains Gateway is designed to only allow one window to open. Now, when you try to open an already opened window with JetBrains Gateway, you'll get a prompt to remind you that the workspace is already opened.
 
