--- a/src/lib/contents/changelog/2022-11-30.md
+++ b/src/lib/contents/changelog/2022-11-30.md
@@ -70,11 +70,11 @@ You can now view ports both in your JetBrains terminal, and in the JetBrains bac
 
 1. **From the backend control center** - In addition to [performing many Gitpod actions from the JetBrains backend performance center](https://gitpod.io/changelog/september-gitpod-release-2022#jetbrains-backend-control-center---gitpod-workspace-actions) you can now also view and manage your ports. See which ports are being forwarded or exposed. You can also add, remove and open URLs for your workspace ports without leaving the JetBrains UI.
 
-![](/images/jetbrains-gateway/jetbrains-ports-view.png)
+![JetBrains Ports view in Gitpod workspace](/images/jetbrains-gateway/jetbrains-ports-view.png)
 
 1. **From within the terminals view** - You can now also see, and manage your ports from the terminal view direct in the JetBrains IDE, allowing you to manage any ports related to the current running terminal process all without leaving the terminal window in your IDE.
 
-![](/images/jetbrains-gateway/port-actions-jetbrains-terminal.png)
+![JetBrains Ports view in Terminal in Gitpod workspace](/images/jetbrains-gateway/port-actions-jetbrains-terminal.png)
 
 Running your IDE on your desktop means that all your ports are automatically forwarded, so you can use your `localhost` URL as usual. You can also manage ports from any IDE or Gitpod interface using the [Gitpod CLI](/docs/references/gitpod-cli). For example, try running `gp ports list` in any workspace to see a list of your workspaces running ports.
 
