Strike initial release date for Jammy for January changelog (#3533)

--- a/src/lib/contents/changelog/2023-01-31.md
+++ b/src/lib/contents/changelog/2023-01-31.md
@@ -47,7 +47,7 @@ Prebuilds do a lot of work downloading dependencies, building projects, and gett
 
 ## Workspace Images OS and Node versions update
 
-On February 28th, Gitpod workspace images will be upgraded to use Ubuntu 22.04.1 LTS (Jammy Jellyfish). Additionally, `gitpod/workspace-node` and `gitpod/workspace-node-lts` workspace images will be upgraded to use Node 19.0.0 and Node 18.13.0, respectively.
+~~On February 28th,~~ Gitpod workspace images will be upgraded to use Ubuntu 22.04.1 LTS (Jammy Jellyfish). Additionally, `gitpod/workspace-node` and `gitpod/workspace-node-lts` workspace images will be upgraded to use Node 19.0.0 and Node 18.13.0, respectively.
 
 If you'd like to continue using the current OS and Node versions, you may pin the workspace image version by changing the tag from `latest` to `2023-01-16-03-31-28` (e.g. `gitpod/workspace-node-lts:2023-01-16-03-31-28`) in your `.gitpod.yml` or `Dockerfile`.
 
