:sparkles: `/changelog` page cleanup (#3643)
* :sparkles: `/changelog` page cleanup

* word casing

* :wrench: date formatting

--- a/src/lib/contents/changelog/2022-05-09.md
+++ b/src/lib/contents/changelog/2022-05-09.md
@@ -31,7 +31,9 @@ Check out the [VS Code settings sync documentation](https://www.gitpod.io/docs/r
 
 <p><Contributors usernames="akosyakov,filiptronicek,jeanp413" /></p>
 
-### Fixes and improvements
+<br>
+<details>
+<summary class="text-2xl text-important">Fixes and improvements</summary>
 
 - [#8248](https://github.com/gitpod-io/gitpod/pull/8248) - Add user environment variable name length and value length validation in settings UI modal. <Contributors usernames="JanKoehnlein,geropl,gtsiolis,jankeromnes,meysholdt,randomir" />
 - [#9831](https://github.com/gitpod-io/gitpod/pull/9831) - Add `staticMessagebusPassword` config flag to use a fixed message bus password in the installer <Contributors usernames="andrew-farries,corneliusludmann,geropl" />
@@ -70,3 +72,5 @@ Check out the [VS Code settings sync documentation](https://www.gitpod.io/docs/r
 - [#9630](https://github.com/gitpod-io/gitpod/pull/9630) - Allow `disableDynamicAuthProviderLogin`, `enableLocalApp` and `defaultBaseImageRegistryWhitelist` server config to be configurable via the installer <Contributors usernames="andrew-farries,corneliusludmann,geropl" />
 - [#9717](https://github.com/gitpod-io/gitpod/pull/9717) - Allow chargebee payment config to be specified via the installer for SaaS installations. <Contributors usernames="andrew-farries,corneliusludmann,geropl" />
 - [#9718](https://github.com/gitpod-io/gitpod/pull/9718) - [KOTS]: configure blockNewUsers <Contributors usernames="MrSimonEmms,corneliusludmann" />
+
+</details>
