--- a/src/lib/contents/changelog/2022-05-23.md
+++ b/src/lib/contents/changelog/2022-05-23.md
@@ -47,7 +47,9 @@ One click is enough to tell us how you feel, or write a quick note, all without 
 
 </div>
 
-### Fixes and improvements
+<br>
+<details>
+<summary class="text-2xl text-important">Fixes and improvements</summary>
 
 - [#10154](https://github.com/gitpod-io/gitpod/pull/10154) - [server] Skip GitHub App prebuilds when the repository has no prebuild task(s) or .gitpod.yml <Contributors usernames="AlexTugarev,andrew-farries,jankeromnes" />
 - [#10061](https://github.com/gitpod-io/gitpod/pull/10061) - Users can send feedback from the Dashboard. <Contributors usernames="andrew-farries,gtsiolis,jakobhero,jldec,laushinka" />
@@ -68,3 +70,5 @@ One click is enough to tell us how you feel, or write a quick note, all without 
 - [#10127](https://github.com/gitpod-io/gitpod/pull/10127) - [installer] Use installation shortname when constructing ws-manager URL templates <Contributors usernames="andrew-farries,sagor999" />
 - [#10114](https://github.com/gitpod-io/gitpod/pull/10114) - eccomp notify: correction of system call name in the log. <Contributors usernames="sagor999,utam0k" />
 - [#10082](https://github.com/gitpod-io/gitpod/pull/10082) - [ws-daemon] add log entry when ready probe fails <Contributors usernames="csweichel,sagor999" />
+
+</details>
