--- a/src/lib/contents/changelog/2022-06-20.md
+++ b/src/lib/contents/changelog/2022-06-20.md
@@ -28,7 +28,9 @@ Feedback is welcome, feel free to raise an [issue](https://github.com/gitpod-io/
 
 </div>
 
-### Fixes and improvements
+<br>
+<details>
+<summary class="text-2xl text-important">Fixes and improvements</summary>
 
 - [#10450](https://github.com/gitpod-io/gitpod/pull/10450) - Added action to delete all inactive workspaces <Contributors usernames="david-bakin,easyCZ,gtsiolis,svenefftinge" />
 - [#10704](https://github.com/gitpod-io/gitpod/pull/10704) - SSH access no longer requires a private SSH key (removing forced password prompt) <Contributors usernames="MrSimonEmms,akosyakov,aledbf,iQQBot" />
@@ -37,3 +39,5 @@ Feedback is welcome, feel free to raise an [issue](https://github.com/gitpod-io/
 - [#10175](https://github.com/gitpod-io/gitpod/pull/10175) - Allow customize VMOptions for JetBrains backend server, by setting `INTELLIJ_VMOPTIONS` (also GoLand/PyCharm/PhpStorm) environment variable <Contributors usernames="akosyakov,iQQBot,yaohui-wyh" />
 - [#10562](https://github.com/gitpod-io/gitpod/pull/10562) - Add `GITPOD_WORKSPACE_CLASS` environment variable to workspaces to allow easier identification of the workspace class <Contributors usernames="Furisto,sagor999" />
 - [#10352](https://github.com/gitpod-io/gitpod/pull/10352) - Fix: Don't skip prebuilds if .gitpod.yml has a 'before' task but no 'init' task <Contributors usernames="jankeromnes,jldec" />
+
+</details>
