--- a/src/lib/contents/changelog/2022-07-04.md
+++ b/src/lib/contents/changelog/2022-07-04.md
@@ -30,7 +30,9 @@ Auto-cancellation has been enabled by default for all [projects](https://www.git
 
 </div>
 
-### Fixes and improvements
+<br>
+<details>
+<summary class="text-2xl text-important">Fixes and improvements</summary>
 
 - [#11083](https://github.com/gitpod-io/gitpod/pull/11083) - Fix the start-workspace flow for when a prebuild got auto-cancelled <Contributors usernames="andrew-farries,geropl,svenefftinge" />
 - [#11074](https://github.com/gitpod-io/gitpod/pull/11074) - Fix prebuild permissions <Contributors usernames="andrew-farries,easyCZ,geropl" />
@@ -41,3 +43,5 @@ Auto-cancellation has been enabled by default for all [projects](https://www.git
 - [#10962](https://github.com/gitpod-io/gitpod/pull/10962) - Automatically cancel outdated prebuilds (i.e. new commits are pushed on a branch). This behavior can be disabled in the project's settings. <Contributors usernames="geropl,gtsiolis,jankeromnes,svenefftinge" />
 - [#10952](https://github.com/gitpod-io/gitpod/pull/10952) - Update docker compose to v2.6.1 <Contributors usernames="aledbf,utam0k" />
 - [#10882](https://github.com/gitpod-io/gitpod/pull/10882), [#10727](https://github.com/gitpod-io/gitpod/pull/10727) - Fix prebuilds stuck in `queued` indefinitely <Contributors usernames="andrew-farries,geropl,easyCZ" />
+
+</details>
