--- a/src/lib/contents/changelog/2022-07-18.md
+++ b/src/lib/contents/changelog/2022-07-18.md
@@ -35,9 +35,9 @@ See [the announcement post](https://www.gitpod.io/blog/ssh-key-upload) for detai
 
 </div>
 
-### Fixes and improvements
-
-<div class="mt-small">
+<br>
+<details>
+<summary class="text-2xl text-important">Fixes and improvements</summary>
 
 #### Gitpod Core
 
@@ -52,8 +52,6 @@ See [the announcement post](https://www.gitpod.io/blog/ssh-key-upload) for detai
 - [#11232](https://github.com/gitpod-io/gitpod/pull/11232) - Fix an issue that was causing the workspace to frequently timeout when using a JetBrains IDE. <Contributors usernames="akosyakov,felladrin,mustard-mh" />
 - [#11268](https://github.com/gitpod-io/gitpod/pull/11268) - [installer]: add test for customization of proxy service <Contributors usernames="MrSimonEmms,nandajavarma" />
 
-</div>
-
 #### Gitpod VSCode Browser
 
 - [#379](https://github.com/gitpod-io/openvscode-server/pull/379) - Fix `.gitpod.yml` `ports.onOpen` not working on workspace startup <Contributors usernames="jeanp413,mustard-mh" />
@@ -63,3 +61,5 @@ See [the announcement post](https://www.gitpod.io/blog/ssh-key-upload) for detai
 
 - [#6](https://github.com/gitpod-io/gitpod-vscode-desktop/pull/6) - Fix auth validation <Contributors usernames="jeanp413" />
 - [#5](https://github.com/gitpod-io/gitpod-vscode-desktop/pull/5) - Use new getSSHPublicKeys api method <Contributors usernames="jeanp413" />
+
+</details>
