--- a/src/lib/contents/changelog/2022-08-01.md
+++ b/src/lib/contents/changelog/2022-08-01.md
@@ -50,7 +50,9 @@ The new VS Code command `Gitpod: Show Release Notes` let you access latest chang
 
 ![Latest changelog view in VS Code](https://www.gitpod.io/images/changelog/2022-08-01/notes.png)
 
-### Fixes and improvements
+<br>
+<details>
+<summary class="text-2xl text-important">Fixes and improvements</summary>
 
 - `gp` has now a new `timeout` namespace letting you to [show](https://www.gitpod.io/docs/references/gitpod-cli#show) and [extend](https://www.gitpod.io/docs/references/gitpod-cli#extend) timeout of a running workspace.
 - [#11642](https://github.com/gitpod-io/gitpod/pull/11642) - [local-preview] Add separated anonymous telemetry <Contributors usernames="MrSimonEmms,Pothulapati" />
@@ -62,3 +64,5 @@ The new VS Code command `Gitpod: Show Release Notes` let you access latest chang
 - [#10731](https://github.com/gitpod-io/gitpod/pull/10731) - [.gitpod.yml generator] Use 'pnpm' package manager when there is a pnpm-lock.yaml file or the package.json specifies it <Contributors usernames="andrew-farries,gengjiawen,jankeromnes" />
 - [#11491](https://github.com/gitpod-io/gitpod/pull/11491) - Check the following in cgroup v1/v2Eliminate dockerd rootless mode in cgroup v2 <Contributors usernames="jenting,utam0k" />
 - [#11604](https://github.com/gitpod-io/gitpod/pull/11604) - Update docker compose to v2.7.0 <Contributors usernames="aledbf,jenting" />
+
+</details>
