--- a/src/lib/contents/changelog/2022-08-31.md
+++ b/src/lib/contents/changelog/2022-08-31.md
@@ -122,7 +122,9 @@ The SSH protocol is the primary method of connection to Gitpod workspaces for Je
 
 Previously, Gitpod did not support OpenSSH clients >v8.8, nor did Gitpod support RSA sha256/sha512. For users using VS Code Desktop with the SSH Gateway approach, this could mean that in some cases users could not leverage SSH access to Gitpod due to incompatible keys or OpenSSH client's, however this issue should now be resolved.
 
-## Other fixes and improvements
+<br>
+<details>
+<summary class="text-2xl text-important">Fixes and improvements</summary>
 
 - [#12468](https://github.com/gitpod-io/gitpod/pull/12468) - Local Preview: Check and exit if M1 Mac <Contributors usernames="Pothulapati,corneliusludmann" />
 - [#12116](https://github.com/gitpod-io/gitpod/pull/12116) - Gitpod CLI: New command `gp tasks stop` <Contributors usernames="akosyakov,andreafalzetti,felladrin,filiptronicek,mustard-mh" />
@@ -147,3 +149,5 @@ Previously, Gitpod did not support OpenSSH clients >v8.8, nor did Gitpod support
 - [#11434](https://github.com/gitpod-io/gitpod/pull/11434) - Local Preview: Provide information about next steps when exited <Contributors usernames="MrSimonEmms,Pothulapati,andrew-farries,gtsiolis,lucasvaltl" />
 - [#11570](https://github.com/gitpod-io/gitpod/pull/11570) - Fix broken prebuild trigger for GHE. <Contributors usernames="AlexTugarev,geropl" />
 - [#11768](https://github.com/gitpod-io/gitpod/pull/11768) - Display an alert on signup if a user cannot login because their license does not cover for that additional seat <Contributors usernames="AlexTugarev,geropl,gtsiolis,lucasvaltl" />
+
+</details>
