--- a/src/lib/contents/changelog/2022-09-30.md
+++ b/src/lib/contents/changelog/2022-09-30.md
@@ -108,7 +108,9 @@ Are you working with a large git repository? You want to hear about this.
 
 We have changed how files are fetched from git into Gitpod on workspace start, to make your experience faster. In our testing of the changes, we observed differences from around 2m30s down to 40s. If you're using large repositories with Gitpod, give it a try and [let us know](https://gitpod.io/support) about your experience 🚀
 
-### Fixes and improvements
+<br>
+<details>
+<summary class="text-2xl text-important">Fixes and improvements</summary>
 
 - [#13318](https://github.com/gitpod-io/gitpod/pull/13318) - Keep the last selected team selected <Contributors usernames="gtsiolis,laushinka,svenefftinge" />
 - [#13402](https://github.com/gitpod-io/gitpod/pull/13402) - [server] Fix for the inability to delete teams that were not subscribed to usage based pricing <Contributors usernames="andrew-farries,jankeromnes" />
@@ -138,3 +140,5 @@ We have changed how files are fetched from git into Gitpod on workspace start, t
 - [#12669](https://github.com/gitpod-io/gitpod/pull/12669) - Reword "Spending Limit" to "Usage Limit" <Contributors usernames="AlexTugarev,andrew-farries,jldec" />
 - [#12568](https://github.com/gitpod-io/gitpod/pull/12568) - JetBrains: Provide workspace class info in Backend Control Center <Contributors usernames="akosyakov,andreafalzetti,felladrin" />
 - [#12232](https://github.com/gitpod-io/gitpod/pull/12232) - Fixed JetBrains connection loop when connecting twice to the same workspace <Contributors usernames="akosyakov,andreafalzetti,felladrin" />
+
+</details>
