--- a/src/lib/contents/changelog/2022-06-06.md
+++ b/src/lib/contents/changelog/2022-06-06.md
@@ -50,7 +50,9 @@ Always ready to code 🚀
 
 </div>
 
-### Fixes and improvements
+<br>
+<details>
+<summary class="text-2xl text-important">Fixes and improvements</summary>
 
 - [#10469](https://github.com/gitpod-io/gitpod/pull/10469) - Check docker-compose download <Contributors usernames="aledbf,sagor999" />
 - [#10458](https://github.com/gitpod-io/gitpod/pull/10458) - Update docker compose to v2.6.0 <Contributors usernames="aledbf,kylos101,sagor999" />
@@ -72,3 +74,5 @@ Always ready to code 🚀
 - [#10290](https://github.com/gitpod-io/gitpod/pull/10290) - [experimental] add a metric to track volume snapshot time <Contributors usernames="Furisto,jenting,sagor999" />
 - [#10177](https://github.com/gitpod-io/gitpod/pull/10177) - JetBrains Gateway: The "Connect" button now gets disabled while a JetBrains Client is connected to the workspace. <Contributors usernames="akosyakov,felladrin,iQQBot,yaohui-wyh" />
 - [#10280](https://github.com/gitpod-io/gitpod/pull/10280) - [initializer] Fix issue with publicly signed SCM's on a self-signed Gitpod instance <Contributors usernames="Pothulapati,corneliusludmann,csweichel" />
+
+</details>
