✨ use `yml` instead of `yaml` in code snippets (#3692)
* ✨ use `yml` instead of `yaml` in code snippets

* nit fix URL

--- a/src/lib/contents/changelog/2022-02-14.md
+++ b/src/lib/contents/changelog/2022-02-14.md
@@ -36,7 +36,7 @@ For an up-to-date list of available images, please [refer to this list](https://
 
 In your `.gitpod.yml`, all you need to do is add the following line:
 
-```yaml
+```yml
 image: gitpod/workspace-xyz
 ```
 
